--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.1.1",
+    "@tailwindcss/forms": "^0.3.2",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-device-detect": "^1.17.0",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-multi-carousel": "^2.6.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.13",
+    "tailwindcss": "^2.1.2"
   }
 }
